--- a/ds_config.yaml
+++ b/ds_config.yaml
@@ -25,13 +25,11 @@
   },
   "wall_clock_breakdown": False,
   "zero_optimization": {
-      "stage": 0,
-      "allgather_partitions": True,
-      "reduce_scatter": True,
-      "allgather_bucket_size": 50000000,
-      "reduce_bucket_size": 50000000,
-      "overlap_comm": True,
-      "contiguous_gradients": True,
-      "cpu_offload": False
-  }
+        "stage": 2,
+        "offload_optimizer": {
+            "device": "cpu",
+        },
+        "contiguous_gradients": true,
+        "overlap_comm": true
+    }
 }
