--- a/ds_config.yaml
+++ b/ds_config.yaml
@@ -15,7 +15,7 @@
       "enabled": false
   },
   "fp16": {
-      "enabled": false,
+      "enabled": true,
       "fp16_master_weights_and_grads": False,
       "loss_scale": 0,
       "loss_scale_window": 500,
@@ -24,12 +24,22 @@
       "initial_scale_power": 15
   },
   "wall_clock_breakdown": False,
+  "zero_allow_untested_optimizer": true,
   "zero_optimization": {
-        "stage": 2,
-        "offload_optimizer": {
-            "device": "cpu",
-        },
+        "stage": 3,
         "contiguous_gradients": true,
-        "overlap_comm": true
-    }
+        "stage3_max_live_parameters": 1.e+9,
+        "stage3_max_reuse_distance": 1.e+9,
+        "stage3_prefetch_bucket_size": 1.e+7,
+        "stage3_param_persistence_threshold": 1.e+5,
+        "reduce_bucket_size": 1.e+7,
+        "sub_group_size": 1.e+9,
+        "offload_optimizer": {
+            "device": "cpu"
+         },
+        "offload_param": {
+            "device": "cpu"
+       }
+   }
+    
 }
