--- a/ds_config.yaml
+++ b/ds_config.yaml
@@ -2,20 +2,32 @@
   "train_batch_size": 128,
   "steps_per_print": 10000000000,
   "optimizer": {
-    "type": "SGD",
-    "params": {
-      "lr": 0.01,
-      "momentum": 0.9,
-      "weight_decay": 5.e-4
-    }
-  },
+     "type": "Adam",
+     "params": {
+       "lr": 0.001,
+       "betas": [
+         0.8,
+         0.999
+       ],
+       "eps": 1.e-8,
+       "weight_decay": 3.e-7
+     }
+   },
+   "scheduler": {
+     "type": "WarmupLR",
+     "params": {
+       "warmup_min_lr": 0,
+       "warmup_max_lr": 0.001,
+       "warmup_num_steps": 1000
+     }
+   },
   "gradient_clipping": 1.0,
   "prescale_gradients": False,
   "bf16": {
       "enabled": false
   },
   "fp16": {
-      "enabled": true,
+      "enabled": false,
       "fp16_master_weights_and_grads": False,
       "loss_scale": 0,
       "loss_scale_window": 500,
